# personal-transcribe

./: .gitignore  README.md  clean_pycache.ps1  environment.yml  main.py  pyproject.toml  run.bat  run.ps1  run_conda.bat
resources/: vocabulary.txt
resources/themes/: dark.qss  light.qss
src/: __init__.py
src/ai/: __init__.py  ai_manager.py  anthropic_provider.py  deepseek_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  provider_base.py
src/config/: __init__.py  settings.py  shortcuts.py
src/export/: __init__.py  base_exporter.py  docx_exporter.py  pdf_exporter.py  srt_exporter.py
src/models/: __init__.py  metadata.py  project.py  transcript.py  undo_commands.py
src/transcription/: __init__.py  timestamp_utils.py  transcribe_process.py  whisper_engine.py
src/ui/: __init__.py  ai_polish_dialog.py  ai_settings_dialog.py  audio_player.py  autosave_worker.py  batch_dialog.py  export_dialog.py  find_replace.py  main_window.py  metadata_dialog.py  speaker_editor.py  statistics_panel.py  transcript_editor.py  transcript_loader_worker.py  transcription_dialog.py  transcription_subprocess_dialog.py  vocab_dialog.py
src/utils/: logger.py
